# minesweeper

./: CMakeLists.txt  CMakePresets.json  README.md  minesweeper.c
minesweeper/: CMakeLists.txt
